--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
@@ -20,14 +22,14 @@
     "autoprefixer": "10.4.5",
     "embla-carousel-react": "^7.0.2",
     "esbuild": "^0.13.13",
-    "framer-motion": "^7.3.2",
+    "framer-motion": "^6.5.0",
     "github-slugger": "^1.3.0",
     "graphql": "^16.6.0",
     "graphql-request": "^4.3.0",
     "gray-matter": "^4.0.2",
     "image-size": "1.0.0",
     "mdx-bundler": "^8.0.0",
-    "next": "12.1.4",
+    "next": "^12.3.0",
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
@@ -35,7 +37,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
-    "react-player": "^2.10.1",
+    "react-player": "^2.10.0",
     "react-vimeo-embed": "^0.9.0",
     "reading-time": "1.3.0",
     "rehype-autolink-headings": "^6.1.0",
