--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "10.4.5",
-    "embla-carousel-react": "^7.0.0",
+    "embla-carousel-react": "7.0.0",
     "esbuild": "^0.13.13",
-    "framer-motion": "^6.5.0",
+    "framer-motion": "6.5.0",
     "github-slugger": "^1.3.0",
     "graphql": "^16.6.0",
     "graphql-request": "^4.3.0",
