--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "viva-la-zoom",
   "homepage": ".",
   "version": "1.5.6",
+  "assetPrefix": ".",
   "private": true,
   "scripts": {
     "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
