--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "autoprefixer": "10.4.5",
     "embla-carousel-react": "7.0.0",
     "esbuild": "^0.13.13",
-    "framer-motion": "6.5.0",
+    "framer-motion": "^7.3.4",
     "github-slugger": "^1.3.0",
     "graphql": "^16.6.0",
     "graphql-request": "^4.3.0",
@@ -34,8 +34,8 @@
     "next-themes": "^0.0.14",
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-player": "^2.10.0",
