--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "^8.4.5",
     "preact": "^10.6.2",
     "react": "^18.2.0",
+    "react-datocms": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
